Fix link to audio file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Also, //Hals- und Beinbruch//!
 [[Labor verlassen -&gt;Labor (Gang)]] </tw-passagedata><tw-passagedata pid="19" name="Sergeant Zuckerberg" tags="" position="2900,1277" size="100,100">//Als ihr euch den Mann näher anschaut, erkennt ihr, dass sein Unterkörper von ausgetrockneten Wunden übersät ist. In seiner rechten Hand hält er etwas, das aussieht wie ein Diktiergerät. Ihr nehmt es an euch.//
 
 &lt;audio controls&gt;
-	&lt;source src=&quot;logbook.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
+	&lt;source src=&quot;aud/logbook.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
 &lt;/audio&gt;
 
 (set: $reactor to true)
